--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
     <script src="js/services.js"></script>
   </head>
 
-  <body ng-app="conFusion">
+  <body ng-app="mll">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
